<?xml version="1.0" encoding="UTF-8"?>
<!--

    Copyright (c) The Jaeger Authors
    SPDX-License-Identifier: Apache-2.0

-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>io.jaegertracing.dependencies</groupId>
  <artifactId>jaeger-spark-dependencies-parent</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <packaging>pom</packaging>

  <modules>
    <module>jaeger-spark-dependencies-test</module>
    <module>jaeger-spark-dependencies-common</module>
    <module>jaeger-spark-dependencies-cassandra</module>
    <module>jaeger-spark-dependencies-elasticsearch</module>
    <module>jaeger-spark-dependencies-opensearch</module>
    <module>jaeger-spark-dependencies</module>
  </modules>

  <properties>
    <maven.compiler.source>21</maven.compiler.source>
    <maven.compiler.target>21</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.build.resourceEncoding>UTF-8</project.build.resourceEncoding>

    <version.scala.binary>2.12</version.scala.binary>
    <version.org.apache.spark>3.5.7</version.org.apache.spark>
    <version.io.jaegertracing>0.34.3</version.io.jaegertracing>
    <version.io.opentracing>0.33.0</version.io.opentracing>
    <version.io.opentelemetry>1.57.0</version.io.opentelemetry>
    <version.io.opentelemetry.instrumentation>2.10.0</version.io.opentelemetry.instrumentation>
    <version.junit>4.13.2</version.junit>
    <version.org.assertj>3.27.6</version.org.assertj>
    <version.org.testcontainers>1.21.4</version.org.testcontainers>
    <version.com.squareup.okhttp3-okhttp>4.12.0</version.com.squareup.okhttp3-okhttp>
    <version.org.awaitility-awaitility>4.3.0</version.org.awaitility-awaitility>

    <version.maven-license-plugin>3.0</version.maven-license-plugin>
    <version.maven-compiler-plugin>3.11.0</version.maven-compiler-plugin>
    <version.maven-install-plugin>3.1.1</version.maven-install-plugin>
    <version.maven-source-plugin>3.2.1</version.maven-source-plugin>
    <version.maven-plugin>0.3.4</version.maven-plugin>
    <version.maven-shade-plugin>3.5.2</version.maven-shade-plugin>
    <version.jackson>2.20.1</version.jackson>
    <version.hadoop.client>3.4.2</version.hadoop.client>
    <version.elasticsearch.spark>9.1.3</version.elasticsearch.spark>
  </properties>

  <inceptionYear>2017</inceptionYear>

  <licenses>
    <license>
      <name>The Apache Software License, Version 2.0</name>
      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
      <distribution>repo</distribution>
    </license>
  </licenses>

  <developers>
    <developer>
      <id>jaegertracing</id>
      <name>Jaegertracing Gitter</name>
      <url>https://gitter.im/jaegertracing/Lobby</url>
    </developer>
  </developers>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>${project.groupId}</groupId>
        <artifactId>jaeger-spark-dependencies-common</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>${project.groupId}</groupId>
        <artifactId>jaeger-spark-dependencies-test</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>${project.groupId}</groupId>
        <artifactId>jaeger-spark-dependencies-cassandra</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>${project.groupId}</groupId>
        <artifactId>jaeger-spark-dependencies-elasticsearch</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>${project.groupId}</groupId>
        <artifactId>jaeger-spark-dependencies-opensearch</artifactId>
        <version>${project.version}</version>
      </dependency>

      <dependency>
        <groupId>org.apache.spark</groupId>
        <artifactId>spark-core_${version.scala.binary}</artifactId>
        <version>${version.org.apache.spark}</version>
        <exclusions>
          <!-- jets3t S3 pins old version (1.3), missing Base64.encodeBase64String(byte[]) -->
          <exclusion>
            <groupId>commons-codec</groupId>
            <artifactId>commons-codec</artifactId>
          </exclusion>
          <exclusion>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-compress</artifactId>
          </exclusion>
          <exclusion>
            <groupId>org.apache.zookeeper</groupId>
            <artifactId>zookeeper</artifactId>
          </exclusion>
          <exclusion>
            <groupId>com.fasterxml.jackson.module</groupId>
            <artifactId>jackson-module-scala_${version.scala.binary}</artifactId>
          </exclusion>
          <exclusion>
            <groupId>org.apache.hadoop</groupId>
            <artifactId>hadoop-client-api</artifactId>
          </exclusion>
          <exclusion>
            <groupId>org.apache.hadoop</groupId>
            <artifactId>hadoop-client-runtime</artifactId>
          </exclusion>
        </exclusions>
      </dependency>

      <dependency>
        <groupId>org.testcontainers</groupId>
        <artifactId>testcontainers</artifactId>
        <version>${version.org.testcontainers}</version>
      </dependency>
      <dependency>
        <groupId>org.testcontainers</groupId>
        <artifactId>cassandra</artifactId>
        <version>${version.org.testcontainers}</version>
        <exclusions>
          <exclusion>
            <!-- We want Cassandra Java 4 driver rather than the one included with testcontainers-cassandra -->
            <groupId>com.datastax.cassandra</groupId>
            <artifactId>cassandra-driver-core</artifactId>
          </exclusion>
        </exclusions>
      </dependency>
      <!-- Ensure okio 3.x is used (required by okhttp 4.12.0 and okhttp-jvm 5.3.2) -->
      <dependency>
        <groupId>com.squareup.okio</groupId>
        <artifactId>okio</artifactId>
        <version>3.16.4</version>
      </dependency>
      <dependency>
        <groupId>com.squareup.okio</groupId>
        <artifactId>okio-jvm</artifactId>
        <version>3.16.4</version>
      </dependency>
      <dependency>
        <groupId>com.google.guava</groupId>
        <artifactId>guava</artifactId>
        <version>32.1.3-jre</version>
      </dependency>
      <!-- Forcibly bump Commons Collection version to avoid CVE-2015-7501 -->
      <dependency>
        <groupId>commons-collections</groupId>
        <artifactId>commons-collections</artifactId>
        <version>3.2.2</version>
      </dependency>
      <dependency>
        <groupId>commons-beanutils</groupId>
        <artifactId>commons-beanutils</artifactId>
        <version>1.11.0</version>
      </dependency>
      <dependency>
        <groupId>org.scala-lang</groupId>
        <artifactId>scala-library</artifactId>
        <version>${version.scala.binary}.18</version>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <dependencies>
    <dependency>
      <groupId>org.apache.spark</groupId>
      <artifactId>spark-core_${version.scala.binary}</artifactId>
    </dependency>

    <!-- avoids compile error: Could not access type DataFrame in package org.apache.spark.sql -->
    <dependency>
      <groupId>org.apache.spark</groupId>
      <artifactId>spark-sql_${version.scala.binary}</artifactId>
      <version>${version.org.apache.spark}</version>
      <exclusions>
        <exclusion>
          <groupId>org.apache.avro</groupId>
          <artifactId>avro</artifactId>
        </exclusion>
        <exclusion>
          <groupId>com.fasterxml.jackson.module</groupId>
          <artifactId>jackson-module-scala_${version.scala.binary}</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <!-- BEGIN dependecy override versions -->
    <dependency>
      <groupId>com.google.protobuf</groupId>
      <artifactId>protobuf-java</artifactId>
      <version>3.25.8</version>
    </dependency>
    <dependency>
      <groupId>org.apache.zookeeper</groupId>
      <artifactId>zookeeper</artifactId>
      <version>3.9.4</version>
    </dependency>
    
    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-core</artifactId>
      <version>${version.jackson}</version>
    </dependency>
    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-databind</artifactId>
      <version>${version.jackson}</version>
    </dependency>
    <dependency>
      <groupId>com.fasterxml.jackson.module</groupId>
      <artifactId>jackson-module-scala_${version.scala.binary}</artifactId>
      <version>${version.jackson}</version>
    </dependency>
    <dependency>
      <groupId>com.fasterxml.jackson.jaxrs</groupId>
      <artifactId>jackson-jaxrs-base</artifactId>
      <version>${version.jackson}</version>
    </dependency>
    <dependency>
      <groupId>com.fasterxml.jackson.jaxrs</groupId>
      <artifactId>jackson-jaxrs-json-provider</artifactId>
      <version>${version.jackson}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.hadoop</groupId>
      <artifactId>hadoop-client</artifactId>
      <version>${version.hadoop.client}</version>
      <exclusions>
        <exclusion>
          <groupId>org.apache.hadoop.thirdparty</groupId>
          <artifactId>hadoop-shaded-protobuf_3_7</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>io.netty</groupId>
      <artifactId>netty-all</artifactId>
      <version>4.2.9.Final</version>
    </dependency>
    <dependency>
      <groupId>org.apache.avro</groupId>
      <artifactId>avro</artifactId>
      <version>1.12.1</version>
    </dependency>
    <!-- END dependency override versions -->
    
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>${version.junit}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.assertj</groupId>
      <artifactId>assertj-core</artifactId>
      <version>${version.org.assertj}</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>com.mycila</groupId>
          <artifactId>license-maven-plugin</artifactId>
          <version>${version.maven-license-plugin}</version>
        </plugin>
        <!-- mvn -N io.takari:maven:wrapper -Dmaven=3.5.0 -->
        <plugin>
          <groupId>io.takari</groupId>
          <artifactId>maven</artifactId>
          <version>${version.maven-plugi}</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>2.22.2</version>
        </plugin>
      </plugins>
    </pluginManagement>

    <plugins>
      <plugin>
        <groupId>com.mycila</groupId>
        <artifactId>license-maven-plugin</artifactId>
        <configuration>
          <header>header.txt</header>
          <failIfMissing>true</failIfMissing>
          <failIfUnknown>true</failIfUnknown>
          <mapping>
            <Makefile>SCRIPT_STYLE</Makefile>
            <yaml>SCRIPT_STYLE</yaml>
          </mapping>
          <excludes>
            <exclude>LICENSE</exclude>
            <exclude>mvnw</exclude>
            <exclude>mvnw.cmd</exclude>
            <exclude>.mvn/wrapper/maven-wrapper.properties</exclude>
            <exclude>**swp</exclude>
            <exclude>.github/java-upgrade/**</exclude>
            <!-- These files also contain Zipkin (c) headers -->
            <exclude>**/ElasticsearchDependenciesJob.java</exclude>
            <exclude>**/OpenSearchDependenciesJob.java</exclude>
            <exclude>**/CassandraDependenciesJob.java</exclude>
          </excludes>
        </configuration>
        <executions>
          <execution>
            <goals>
              <goal>check</goal>
            </goals>
            <phase>compile</phase>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>

  <profiles>
    <!-- Profile for Java 17+ to add required add-opens arguments for Spark compatibility -->
    <profile>
      <id>java17-plus</id>
      <activation>
        <jdk>[17,)</jdk>
      </activation>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-plugin</artifactId>
            <configuration>
              <argLine>
                --add-opens=java.base/java.lang=ALL-UNNAMED
                --add-opens=java.base/java.lang.invoke=ALL-UNNAMED
                --add-opens=java.base/java.lang.reflect=ALL-UNNAMED
                --add-opens=java.base/java.io=ALL-UNNAMED
                --add-opens=java.base/java.net=ALL-UNNAMED
                --add-opens=java.base/java.nio=ALL-UNNAMED
                --add-opens=java.base/java.util=ALL-UNNAMED
                --add-opens=java.base/java.util.concurrent=ALL-UNNAMED
                --add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED
                --add-opens=java.base/sun.nio.ch=ALL-UNNAMED
                --add-opens=java.base/sun.nio.cs=ALL-UNNAMED
                --add-opens=java.base/sun.security.action=ALL-UNNAMED
                --add-opens=java.base/sun.util.calendar=ALL-UNNAMED
                -Djdk.reflect.useDirectMethodHandle=false
              </argLine>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>
</project>
